--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tooni/iconscout-unicons-react",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Making Iconscout's Unicons SVG sets available again, as React components, with TypeScript support.",
   "type": "module",
   "files": [
     "dist"
